--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -285,6 +285,8 @@ services:
     #privileged: true
     cap_add:
       - NET_ADMIN
+    volumes:
+      - zeek_data:/opt/pocketsoc-ng/data
 #    networks:
 #      - mirror
 
