--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -226,7 +226,7 @@ services:
       - REDIS_MISP_DB=${REDIS_MISP_DB:-2}
       - REDIS_PASSWORD=${REDIS_PASSWORD:-misp}
       - REDIS_WORKER_DB=${REDIS_MISP_DB:-3}
-      - REQUIRE_TOTP=${REQUIRE_TOTP:-true}
+      - REQUIRE_TOTP=${REQUIRE_TOTP:-false}
       - SHIBB_ADMIN_ROLE=${SHIBB_ADMIN_ROLE:-misp-admin}
       - SHIBB_BLOCK_ORG_CHANGE=${SHIBB_BLOCK_ORG_CHANGE:-false}
       - SHIBB_BLOCK_ROLE_CHANGE=${SHIBB_BLOCK_ROLE_CHANGE:-false}
